<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.5k.MainActivity">

    <item
        android:id="@+id/action_edit_rolls"
        android:icon="@drawable/ic_edit_black_48dp"
        android:title="@string/action_reset_game"
        app:iconTint="@color/black"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset_game"
        android:orderInCategory="100"
        android:title="@string/action_reset_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />

<!--    <item
        android:id="@+id/action_edit_rolls"
        android:orderInCategory="100"
        android:title="@string/edit_rolls"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_change_player"
        android:orderInCategory="100"
        android:title="@string/three_or_four"
        app:showAsAction="never" />
</menu>