<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/wins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/wins1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="0"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/wins2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="0"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/wins3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="0"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/player4WinsLine"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/wins4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="0"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/wins_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/wins"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wins_line">

            <EditText
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/spieler_1"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="30sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/spieler_2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="30sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/spieler_3"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="30sp" />

            <View
                android:id="@+id/player4NameLine"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/spieler_4"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575"
                android:textSize="30sp" />


        </LinearLayout>

        <View
            android:id="@+id/player_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignBottom="@id/player"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/add_score_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_line"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/addCurrentRollButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/addCurrentRollButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textSize="40sp" />

            <Button
                android:id="@+id/addCurrentRollButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textSize="40sp" />

            <Button
                android:id="@+id/addCurrentRollButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_rolls_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total_score_text"
            android:layout_below="@+id/add_score_button"
            android:orientation="horizontal">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null">

                <EditText
                    android:id="@+id/current_rolls_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:text="200"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />
            </ScrollView>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null">

                <EditText
                    android:id="@+id/current_rolls_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:text="200"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />
            </ScrollView>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null">

                <EditText
                    android:id="@+id/current_rolls_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:text="200"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />
            </ScrollView>


            <ScrollView
                android:id="@+id/current_rolls_4_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null">

                <EditText
                    android:id="@+id/current_rolls_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:text="200"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />
            </ScrollView>


        </LinearLayout>

        <View
            android:id="@+id/total_score_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignTop="@+id/total_score"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/total_score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/total_score_line"
            android:layout_marginStart="10dp"
            android:minHeight="48dp"
            android:text="@string/total_score"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/total_score_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="3444"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/total_score_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="3000"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/total_score_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="1000"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/totalScore4Line"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/total_score_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="2000"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>